plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm'
    id 'kotlin-kapt'
}

group = 'com.valb3r.bpmn.intellij.plugin.flowable.parser'


sourceCompatibility = 17

repositories {
    mavenCentral()
}

dependencies {
    api project(":xml-parser-api")
    implementation project(":xml-parser-core")

    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jackson"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:$jackson"

    api "org.mapstruct:mapstruct:$mapstruct"
    kapt "org.mapstruct:mapstruct-processor:$mapstruct"

    api "org.dom4j:dom4j:$dom4j" // Implementation comes from IntelliJ

    // Tests
    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitJupiter"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitJupiter"
    testImplementation "org.junit.jupiter:junit-jupiter-params:$junitJupiter"
    testImplementation "org.junit.platform:junit-platform-runner:$junitPlatformRunner"
    testImplementation "com.jayway.jsonpath:json-path:${jsonPath}"
    testImplementation "org.amshove.kluent:kluent:$kluent"
}

test {
    jvmArgs "--add-opens=java.base/java.nio.charset=ALL-UNNAMED"

    jacoco {
        destinationFile = file("${buildDir}/jacoco/test.exec")
        includeNoLocationClasses = true
        excludes = ["jdk.internal.*"]
    }

    testLogging {
        events "failed"
        exceptionFormat "full"
    }
}



jacocoTestReport {
    // Adjust the output of the test report
    reports {
        xml.required = true
        csv.required = true
    }
}